# strivo-plugins

./: Cargo.toml  LICENSE  README.md
src/: dirs.rs  lib.rs
src/archiver/: db.rs  downloader.rs  mod.rs  render.rs  scanner.rs  types.rs
src/crunchr/: analysis.rs  cost.rs  db.rs  mod.rs  pipeline.rs  render.rs  types.rs
src/crunchr/transcribe/: mod.rs  voxtral_api.rs  voxtral_local.rs  whisper_cli.rs
